--- a/Decision_tree_HW_implementation/Tree_to_Table/Decision_tree_to_table.ipynb
+++ b/Decision_tree_HW_implementation/Tree_to_Table/Decision_tree_to_table.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Here, I have also demonstrated how to convert the decision tree model to if-else code and also covert the tree into a decision table. Also demonstrated how to use that if-else code and decision table to make predictions."
+        "Here, I have demonstrated how to convert the decision tree model to if-else code and also covert the tree into a decision table. Also demonstrated how to use that if-else code and decision table to make predictions."
       ]
     },
     {
