--- a/Decision_tree_HW_implementation/Tree_to_Table/Decision_tree_to_table.ipynb
+++ b/Decision_tree_HW_implementation/Tree_to_Table/Decision_tree_to_table.ipynb
@@ -861,7 +861,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The binary tree structure has 9 nodes and has the following tree structure printed into decision table:\n",
+            "The tree structure has 9 nodes and has the following tree structure printed into decision table:\n",
             "[Node number], [Input feature index], [Value to compare], [Next node if ture], [Next node if false], [is leaf], [Output]\n",
             "\n",
             "\n",
@@ -900,7 +900,7 @@
         "    else:\n",
         "        is_leaves[node_id] = True\n",
         "empty_array = np.empty((0, 7))\n",
-        "print(\"The binary tree structure has %s nodes and has \"\n",
+        "print(\"The tree structure has %s nodes and has \"\n",
         "      \"the following tree structure printed into decision table:\"\n",
         "      % n_nodes)\n",
         "print(\"[Node number], [Input feature index], [Value to compare], [Next node if ture], [Next node if false], [is leaf], [Output]\")\n",
